<resources>
    <string name="app_name">UI_Widgets1</string>
    <string name="toggle_off">Toggle Off</string>
    <string name="toggle_on">Toggle On</string>
    <string name="textview">Toggle button : Toggle On</string>
    <string name="switch1">True</string>
    <string name="notification">Switch</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="checkbox1">CheckBox1</string>
    <string name="checkbox2">CheckBox2</string>
</resources>
